Updated links in HTML

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         <div class="row">
             <div class="col-md-4">
                 <a href="#">
-                    <img class="launcherImg" src="file:///D:/Documents%20And%20Stuff/Documents/Personal%20Website/img/codeicon.png" />
+                    <img class="launcherImg" src="img/codeicon.png" />
                     <br />
                     <h1>GitHub</h1>
                 </a>
             </div>
             <div class="col-md-4">
                 <a href="#">
-                    <img class="launcherImg" src="file:///D:/Documents%20And%20Stuff/Documents/Personal%20Website/img/wikiicon.png" />
+                    <img class="launcherImg" src="img/wikiicon.png" />
                     <br />
                     <h1>BitBucket Wiki</h1>
                  
@@ -35,7 +35,7 @@
             </div>
             <div class="col-md-4">
                 <a href="#">
-                    <img class="launcherImg" src="file:///D:/Documents%20And%20Stuff/Documents/Personal%20Website/img/resumeicon.png" />
+                    <img class="launcherImg" src="img/resumeicon.png" />
                     <br />
                     <h1>Resume</h1>
                 </a>
