--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <a href="#">
-                        <img class="projectImg" src="file:///D:/Documents%20And%20Stuff/Documents/Personal%20Website/img/raspi.png" />
+                        <img class="projectImg" src="img/raspi.png" />
                         <br />
                         <h3>Raspberry Pi Cluster</h3>
                         <p>Group project involving 4 Raspberry Pi's in a cluster and a 5th acting as a wireless SSH control point.  Click Here for the PDF</p>
@@ -126,7 +126,7 @@
                 </div>
                 <div class="col-md-4">
                     <a href="#">
-                        <img class="projectImg" src="file:///D:/Documents%20And%20Stuff/Documents/Personal%20Website/img/quarternote.png" />
+                        <img class="projectImg" src="/img/quarternote.png" />
                         <br />
                         <h3>MyMetrono.me</h3>
                         <p>Simple JavaScript based metronome. Check it out in action here, and view the source code on GitHub.</p>
@@ -134,7 +134,7 @@
                 </div>
                 <div class="col-md-4">
                     <a href="#">
-                        <img class="projectImg" src="file:///D:/Documents%20And%20Stuff/Documents/Personal%20Website/img/infinity.png" />
+                        <img class="projectImg" src="img/infinity.png" />
                         <br />
                         <h3>InfinityMusic</h3>
                         <p>Two person project for a Java based Music Store Web Application. You can check it out here and view the source code on GitHub.</p>
@@ -145,7 +145,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <a href="#">
-                        <img class="projectImg" src="file:///D:/Documents%20And%20Stuff/Documents/Personal%20Website/img/calc.png" />
+                        <img class="projectImg" src="img/calc.png" />
                         <br />
                         <h3>bpm2ms Calculator</h3>
                         <p>A simple Java application for calculating the milisecond value of musical notes based on the user supplied tempo. Also ported over to C#. Source code for the Java and C# are on GitHub.</p>
@@ -153,7 +153,7 @@
                 </div>
                 <div class="col-md-4">
                     <a href="#">
-                        <img class="projectImg" src="file:///D:/Documents%20And%20Stuff/Documents/Personal%20Website/img/pentest.png" />
+                        <img class="projectImg" src="img/pentest.png" />
                         <br />
                         <h3>Music Store Pen Testing</h3>
                         <p>Documents for an independent project involving pen testing a Java based Music Store Web Application for various security vulnerabilites including SQL Injection, Cross Site Scripting, and other Top 10 OWASP vulnerabilities and later providing patches for the exploits.</p>
@@ -161,7 +161,7 @@
                 </div>
                 <div class="col-md-4">
                     <a href="#">
-                        <img class="projectImg" src="file:///D:/Documents%20And%20Stuff/Documents/Personal%20Website/img/test.png" />
+                        <img class="projectImg" src="/img/test.png" />
                         <br />
                         <h3>Software QA Documents</h3>
                         <p>A Sample Test Plan Document from a Software Testing and Assurance course.</p>
