Added links for launcher

--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
     <div class="projectWrapper">
         <div class="row">
             <div class="col-md-4">
-                <a href="#">
+                <a href="https://github.com/mhelms44">
                     <img class="launcherImg" src="img/codeicon.png" />
                     <br />
                     <h1>GitHub</h1>
                 </a>
             </div>
             <div class="col-md-4">
-                <a href="#">
+                <a href="https://bitbucket.org/mhelms877/lab-experiments/wiki/Home">
                     <img class="launcherImg" src="img/wikiicon.png" />
                     <br />
                     <h1>BitBucket Wiki</h1>
-                 
+
                 </a>
             </div>
             <div class="col-md-4">
-                <a href="#">
+                <a href="http://michaelhelms.me/Resume-MichaelHelms.pdf">
                     <img class="launcherImg" src="img/resumeicon.png" />
                     <br />
                     <h1>Resume</h1>
