Uploaded Pi PDF and link

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="projectWrapper">
             <div class="row">
                 <div class="col-md-4">
-                    <a href="#">
+                    <a href="http://michaelhelms.me/RaspberryPiClusterProject_3110">
                         <img class="projectImg" src="https://raw.githubusercontent.com/mhelms44/mhelms44.github.io/master/img/raspi.png" />
                         <br />
                         <h3>Raspberry Pi Cluster</h3>
