Added a link to MyMetrono.me repo

--- a/index.html
+++ b/index.html
@@ -125,11 +125,11 @@
                     </a>
                 </div>
                 <div class="col-md-4">
-                    <a href="#">
+                    <a href="https://github.com/mhelms44/mymetrono.me">
                         <img class="projectImg" src="https://raw.githubusercontent.com/mhelms44/mhelms44.github.io/master/img/quarternote.png" />
                         <br />
                         <h3>MyMetrono.me</h3>
-                        <p>Simple JavaScript based metronome. Check it out in action here, and view the source code on GitHub.</p>
+                        <p>Javascript/Web Audio API based metronome. Check it out on GitHub here - includes a link to a live demo.</p>
                     </a>
                 </div>
                 <div class="col-md-4">
@@ -137,7 +137,7 @@
                         <img class="projectImg" src="https://raw.githubusercontent.com/mhelms44/mhelms44.github.io/master/img/infinity.png" />
                         <br />
                         <h3>InfinityMusic</h3>
-                        <p>Two person project for a Java based Music Store Web Application. You can check it out here and view the source code on GitHub.</p>
+                        <p>Two person project for a Java based Music Store Web Application. You can check it out here and view the source code on GitHub here.</p>
                     </a>
                 </div>
             </div>
