Updated link to bpm2ms

--- a/index.html
+++ b/index.html
@@ -144,11 +144,13 @@
             <br /><br />
             <div class="row">
                 <div class="col-md-4">
-                    <a href="#">
+                    <a href="https://github.com/mhelms44/bpm2ms">
                         <img class="projectImg" src="https://raw.githubusercontent.com/mhelms44/mhelms44.github.io/master/img/calc.png" />
                         <br />
                         <h3>bpm2ms Calculator</h3>
-                        <p>A simple Java application for calculating the milisecond value of musical notes based on the user supplied tempo. Also ported over to C#. Source code for the Java and C# are on GitHub.</p>
+                        <p>A simple Java application for calculating the milisecond value of musical notes based on the user supplied tempo.
+                    </a>  <a href="https://github.com/mhelms44/spawncamping-octo-dubstep">
+                        Also ported over to C++/CLI - click here.</p>
                     </a>
                 </div>
                 <div class="col-md-4">
