Updated mymetrono.me demo hosted on github pages

--- a/index.html
+++ b/index.html
@@ -129,8 +129,9 @@
                         <img class="projectImg" src="https://raw.githubusercontent.com/mhelms44/mhelms44.github.io/master/img/quarternote.png" />
                         <br />
                         <h3>MyMetrono.me</h3>
-                        <p>Javascript/Web Audio API based metronome. Check it out on GitHub here - includes a link to a live demo.</p>
+                        <p>Javascript/Web Audio API based metronome. Check it out on GitHub here.
                     </a>
+                    <a href="http://michaelhelms.me/mymetrono.me/"> a live demo is avaliable by clicking here.</p> </a>
                 </div>
                 <div class="col-md-4">
                     <a href="#">
