Reworded the MyMetrono.me text

--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
                         <br />
                         <h3>MyMetrono.me</h3>
                         <p>Javascript/Web Audio API based metronome. Check it out on GitHub here.
-                    </a>
-                    <a href="http://michaelhelms.me/mymetrono.me/"> a live demo is avaliable by clicking here.</p> </a>
+                    </a> <br />
+                    <a href="http://michaelhelms.me/mymetrono.me/"> I've got a live demo running on GitHub Pages here.</p> </a>
                 </div>
                 <div class="col-md-4">
                     <a href="#">
