Reworded some projects

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         <img class="projectImg" src="https://raw.githubusercontent.com/mhelms44/mhelms44.github.io/master/img/quarternote.png" />
                         <br />
                         <h3>MyMetrono.me</h3>
-                        <p>Javascript/Web Audio API based metronome. Check it out on GitHub here.
+                        <p>Javascript/Web Audio API based metronome. The source is avaliable on GitHub.
                     </a> <br />
                     <a href="http://michaelhelms.me/mymetrono.me/"> I've got a live demo running on GitHub Pages here.</p> </a>
                 </div>
