--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="abilities"><h2 class="abilitiesHeader">Abilities</h2></div>
         <hr class="style-two"></hr>
         <div id="abilitiesWrapper">
-            <h3 class="h3Header">Skills include but are not limited to...</h3>
+            <h3 class="h3Header">Skills include, but are not limited to...</h3>
             <ul class="skillList">
                 <li class="tick">Penetration Testing (7 years)</li>
                 <li class="tick">Linux Administration (9 years)</li>
@@ -130,7 +130,7 @@
                         <br />
                         <h3>MyMetrono.me</h3>
                         <p>Javascript/Web Audio API based metronome. The source is avaliable on GitHub.
-                    </a> <br />
+                    </a>
                     <a href="http://michaelhelms.me/mymetrono.me/"> I've got a live demo running on GitHub Pages here.</p> </a>
                 </div>
                 <div class="col-md-4">
