Updated resume and projects

--- a/index.html
+++ b/index.html
@@ -43,8 +43,6 @@
         </div>
         </div>
 
-        <hr />
-
         <div class="abilities"><h2 class="abilitiesHeader">Abilities</h2></div>
         <hr class="style-two"></hr>
         <div id="abilitiesWrapper">
@@ -134,11 +132,11 @@
                     <a href="http://michaelhelms.me/mymetrono.me/"> I've got a live demo running on GitHub Pages here.</p> </a>
                 </div>
                 <div class="col-md-4">
-                    <a href="#">
+                    <a href="https://infinitymusic-unccmhelms44.rhcloud.com/hw5/">
                         <img class="projectImg" src="https://raw.githubusercontent.com/mhelms44/mhelms44.github.io/master/img/infinity.png" />
                         <br />
                         <h3>InfinityMusic</h3>
-                        <p>Two person project for a Java based Music Store Web Application. You can check it out here and view the source code on GitHub here.</p>
+                        <p>Two person project for a Java based Music Store Web Application. You can check it out here. Source code coming soon.</p>
                     </a>
                 </div>
             </div>
@@ -155,19 +153,19 @@
                     </a>
                 </div>
                 <div class="col-md-4">
-                    <a href="#">
+                    <a href="https://bitbucket.org/mhelms877/lab-experiments/wiki/Pen%20Testing%20a%20Java%20based%20Music%20Store">
                         <img class="projectImg" src="https://raw.githubusercontent.com/mhelms44/mhelms44.github.io/master/img/pentest.png" />
                         <br />
                         <h3>Music Store Pen Testing</h3>
-                        <p>Documents for an independent project involving pen testing a Java based Music Store Web Application for various security vulnerabilites including SQL Injection, Cross Site Scripting, and other Top 10 OWASP vulnerabilities and later providing patches for the exploits.</p>
+                        <p>Documents for an independent project involving pen testing a Java based Music Store Web Application coming soon. In the mean time, check out the BitBucket Wiki for a shorter write up, here.</p>
                     </a>
                 </div>
                 <div class="col-md-4">
-                    <a href="#">
-                        <img class="projectImg" src="https://raw.githubusercontent.com/mhelms44/mhelms44.github.io/master/img/test.png" />
+                    <a href="https://github.com/mhelms44/mhelms44.github.io">
+                        <img class="projectImg" src="https://raw.githubusercontent.com/mhelms44/mhelms44.github.io/master/img/me.png" />
                         <br />
-                        <h3>Software QA Documents</h3>
-                        <p>A Sample Test Plan Document from a Software Testing and Assurance course.</p>
+                        <h3>michaelhelms.me</h3>
+                        <p>The full source code of this website is avaliable on GitHub</p>
                     </a>
                 </div>
             </div>
