Fixed some awkward wording

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         <h3>bpm2ms Calculator</h3>
                         <p>A simple Java application for calculating the milisecond value of musical notes based on the user supplied tempo.
                     </a>  <a href="https://github.com/mhelms44/spawncamping-octo-dubstep">
-                        Also ported over to C++/CLI - click here.</p>
+                        Also ported over to C++/CLI</p>
                     </a>
                 </div>
                 <div class="col-md-4">
@@ -157,7 +157,7 @@
                         <img class="projectImg" src="https://raw.githubusercontent.com/mhelms44/mhelms44.github.io/master/img/pentest.png" />
                         <br />
                         <h3>Music Store Pen Testing</h3>
-                        <p>Documents for an independent project involving pen testing a Java based Music Store Web Application coming soon. In the mean time, check out the BitBucket Wiki for a shorter write up, here.</p>
+                        <p>Short write up on common security vulnerabilities encountered when pen testing a Java Music Store Web App.</p>
                     </a>
                 </div>
                 <div class="col-md-4">
@@ -220,9 +220,9 @@
             </div>
             <div class="footerInfo">
                 <p class="footer1">Handcrafted in NC</p>
-                <p class="footer1">Michael Helms - Full Stack Web Application Development, Cyber Security, Linux Administration, and general computer superhuman abilities.</p>
+                <p class="footer1">Michael Helms - Full Stack Web Application Development, Cyber Security, and Linux enthusiast.</p>
                 <p class="footer2">Check out the source code on GitHub!</p>
-                <p class="footer3">(C) 2016 Michael Helms | michaelhelms.me</p>
+                <p class="footer3">&copy; 2016 Michael Helms | michaelhelms.me</p>
                 <p class="footer4">Icons from The Noun Project and Flaticon</p>
             </div>
         </footer>
