Updated resume link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </a>
             </div>
             <div class="col-md-4">
-                <a href="http://michaelhelms.me/Resume-MichaelHelms.pdf">
+                <a href="https://mhelms44.github.io/Resume-MichaelHelms.pdf">
                     <img class="launcherImg" src="img/resumeicon.png" />
                     <br />
                     <h1>Resume</h1>
