updated MyMetrono.me project links

--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
                     </a>
                 </div>
                 <div class="col-md-4">
-                    <a href="https://github.com/mhelms44/mymetrono.me">
+                    <a href="https://mhelms44.github.io/mymetrono.me/">
                         <img class="projectImg" src="https://raw.githubusercontent.com/mhelms44/mhelms44.github.io/master/img/quarternote.png" />
                         <br />
                         <h3>MyMetrono.me</h3>
                         <p>Javascript/Web Audio API based metronome. The source is avaliable on GitHub.
                     </a>
-                    <a href="http://michaelhelms.me/mymetrono.me/"> I've got a live demo running on GitHub Pages here.</p> </a>
+                    <a href="https://github.com/mhelms44/mymetrono.me"> Click here for the source code.</p> </a>
                 </div>
                 <div class="col-md-4">
                     <a href="https://infinitymusic-unccmhelms44.rhcloud.com/hw5/">
