--- a/index.html
+++ b/index.html
@@ -3,229 +3,20 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css\style.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto|Slabo+27px" rel="stylesheet">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <title>Michael Helms - Linux, Web Dev, Virtualization</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <title>Michael Helms - Linux, Virtualization, Full Stack Dev</title>
 </head>
 <body>
-
     <div class="jumbotron">
-        <div class="container push-spaces"></div>
-    </div>
-
-    <div class="projectWrapper">
-        <div class="row">
-            <div class="col-md-4">
-                <a href="https://github.com/mhelms44">
-                    <img class="launcherImg" src="img/codeicon.png" />
-                    <br />
-                    <h1>GitHub</h1>
-                </a>
-            </div>
-            <div class="col-md-4">
-                <a href="https://bitbucket.org/mhelms877/lab-experiments/wiki/Home">
-                    <img class="launcherImg" src="img/wikiicon.png" />
-                    <br />
-                    <h1>BitBucket Wiki</h1>
-
-                </a>
-            </div>
-            <div class="col-md-4">
-                <a href="https://mhelms44.github.io/Resume-MichaelHelms.pdf">
-                    <img class="launcherImg" src="img/resumeicon.png" />
-                    <br />
-                    <h1>Resume</h1>
-                </a>
-            </div>
-        </div>
-        </div>
-        <br /><br />
-        <div class="abilities"><h2 class="abilitiesHeader">Abilities</h2></div>
-        <hr class="style-two"></hr>
-        <div id="abilitiesWrapper">
-            <h3 class="h3Header">Skills include, but are not limited to...</h3>
-            <ul class="skillList">
-                <li class="tick">Penetration Testing (7 years)</li>
-                <li class="tick">Linux Administration (9 years)</li>
-                <li class="tick">Apache Config + Security (5 years)</li>
-                <li class="tick">Microsoft Server Config + Security (4 years)</li>
-                <li class="tick">Tomcat Config + Security (3 years)</li>
-                <li class="tick">SecurityEnhanced Linux (3 years)</li>
-                <li class="tick">Static Analysis (2 years)</li>
-                <li class="tick">Computer Repair (10+ years)</li>
-                <li class="tick">Web Application Design (4 years)</li>
-                <li class="tick">Virtualization (4 years)</li>
-                <li class="tick">MVC Model (3 years)</li>
-                <li class="tick">Agile Development (3 years)</li>
-                <li class="tick">Heruistics + UI Design (3 years)</li>
-                <li class="tick">UML (3 years)</li>
-            </ul>
-        </div>
-
-        <hr class="style-two"></hr>
-
-        <div id="abilitiesWrapper">
-            <h3 class="h3Header">I speak a few languages</h3>
-            <ul class="skillList">
-                <li class="tick">Java (5 years)</li>
-                <li class="tick">C++ (5 years)</li>
-                <li class="tick">Bash (6 years)</li>
-                <li class="tick">PHP (4 years)</li>
-                <li class="tick">SQL (3 years)</li>
-                <li class="tick">HTML (10+ years)</li>
-                <li class="tick">CSS (10+ years)</li>
-                <li class="tick">JavaScript (5 years)</li>
-                <li class="tick">Python (1 year)</li>
-                <li class="tick">C# (1 year)</li>
-            </ul>
-        </div>
-
-        <hr class="style-two"></hr>
-
-        <div id="abilitiesWrapper">
-            <h3 class="h3Header">Some of my favorite tools</h3>
-            <ul class="skillList">
-                <li class="tick">Eclipse (5 years)</li>
-                <li class="tick">Visual Studio (5 years)</li>
-                <li class="tick">Notepad++ (5 years)</li>
-                <li class="tick">VIM (4 years)</li>
-                <li class="tick">Git (4 years)</li>
-                <li class="tick">Wireshark (4 years)</li>
-                <li class="tick">Snort (4 years)</li>
-                <li class="tick">FortifySCA (2 years)</li>
-                <li class="tick">BeEF (2 years)</li>
-                <li class="tick">Photoshop (4 year)</li>
-                <li class="tick">Balsalmiq Mockups (2 year)</li>
-                <li class="tick">Arch Linux (7 years)</li>
-                <li class="tick">Debian (10+ years)</li>
-                <li class="tick">Ubuntu (8 years)</li>
-                <li class="tick">CentOS (4 years)</li>
-                <li class="tick">Kali/BackTrack Linux (5 years)</li>
-                <li class="tick">Windows (10+ years)</li>
-                <li class="tick">Microsoft Office (10+ years)</li>
-            </ul>
-        </div>
-        <hr class="style-two">
-        <div class="abilities"><h2 class="abilitiesHeader">Noteworthy Projects</h2></div>
-        <br /><br />
-
-        <div class="projectWrapper">
-            <div class="row">
-                <div class="col-md-4">
-                    <a href="http://michaelhelms.me/RaspberryPiClusterProject_3110.pdf">
-                        <img class="projectImg" src="https://raw.githubusercontent.com/mhelms44/mhelms44.github.io/master/img/raspi.png" />
-                        <br />
-                        <h3>Raspberry Pi Cluster</h3>
-                        <p>Group project involving 4 Raspberry Pi's in a cluster and a 5th acting as a wireless SSH control point.  Click Here for the PDF</p>
-                    </a>
-                </div>
-                <div class="col-md-4">
-                    <a href="https://mhelms44.github.io/mymetrono.me/">
-                        <img class="projectImg" src="https://raw.githubusercontent.com/mhelms44/mhelms44.github.io/master/img/quarternote.png" />
-                        <br />
-                        <h3>MyMetrono.me</h3>
-                        <p>Javascript/Web Audio API based metronome. The source is avaliable on GitHub.
-                    </a>
-                    <a href="https://github.com/mhelms44/mymetrono.me"> Click here for the source code.</p> </a>
-                </div>
-                <div class="col-md-4">
-                    <a href="https://infinitymusic-unccmhelms44.rhcloud.com/hw5/">
-                        <img class="projectImg" src="https://raw.githubusercontent.com/mhelms44/mhelms44.github.io/master/img/infinity.png" />
-                        <br />
-                        <h3>InfinityMusic</h3>
-                        <p>Two person project for a Java based Music Store Web Application. You can check it out here. Source code coming soon.</p>
-                    </a>
-                </div>
-            </div>
-            <br /><br />
-            <div class="row">
-                <div class="col-md-4">
-                    <a href="https://github.com/mhelms44/bpm2ms">
-                        <img class="projectImg" src="https://raw.githubusercontent.com/mhelms44/mhelms44.github.io/master/img/calc.png" />
-                        <br />
-                        <h3>bpm2ms Calculator</h3>
-                        <p>A simple Java application for calculating the milisecond value of musical notes based on the user supplied tempo.
-                    </a>  <a href="https://github.com/mhelms44/spawncamping-octo-dubstep">
-                        Also ported over to C++/CLI</p>
-                    </a>
-                </div>
-                <div class="col-md-4">
-                    <a href="https://bitbucket.org/mhelms877/lab-experiments/wiki/Pen%20Testing%20a%20Java%20based%20Music%20Store">
-                        <img class="projectImg" src="https://raw.githubusercontent.com/mhelms44/mhelms44.github.io/master/img/pentest.png" />
-                        <br />
-                        <h3>Music Store Pen Testing</h3>
-                        <p>Short write up on common security vulnerabilities encountered when pen testing a Java Music Store Web App.</p>
-                    </a>
-                </div>
-                <div class="col-md-4">
-                    <a href="https://github.com/mhelms44/mhelms44.github.io">
-                        <img class="projectImg" src="https://raw.githubusercontent.com/mhelms44/mhelms44.github.io/master/img/me.png" />
-                        <br />
-                        <h3>michaelhelms.me</h3>
-                        <p>The full source code of this website is avaliable on GitHub</p>
-                    </a>
-                </div>
-            </div>
-        </div>
-        <br /><br />
-        <div class="contact">
-            <br />
-            <div class="container-fluid bg-2 text-center">
-                <h2>Lets build something!</h2>
-            </div>
-            <br /><br />
-
-
-            <div class="contactLeft">
-                <div class="leftBox">
-                    <div class="iconA"><img class="leftIcon" src="img\email.png" /></div>
-                    <div class="iconB">mhelms44@uncc.edu</div>
-                </div>
-
-            </div>
-
-
-            <div class="contactRight">
-                <div class="rightBox">
-                    <div class="iconC"><img class="rightIcon" src="img\linkedin.png" /></div>
-                    <div class="iconD">https://goo.gl/eU7tJC</div>
-                </div>
-
-            </div>
-            <br /><br /><br /><br />
-            <div class="contactLeft">
-                <div class="leftBoxA">
-                    <div class="iconA"><img class="leftIcon" src="img\bitbucket.png" /></div>
-                    <div class="iconB">https://bitbucket.org/mhelms877</div>
-                </div>
-
-            </div>
-
-            <div class="contactRight">
-                <div class="rightBoxA">
-                    <div class="iconC"><img class="rightIcon" src="img\github.png" /></div>
-                    <div class="iconD">https://github.com/mhelms44</div>
-                </div>
-
-            </div>
-
-        </div>
-
-        <footer>
-            <div class="container-fluid bg-2 text-center">
-                <h2 class="h2footer">Thanks for stopping by!</h2>
-            </div>
-            <div class="footerInfo">
-                <p class="footer1">Handcrafted in NC</p>
-                <p class="footer1">Michael Helms - Full Stack Web Application Development, Cyber Security, and Linux enthusiast.</p>
-                <p class="footer2">Check out the source code on GitHub!</p>
-                <p class="footer3">&copy; 2016 Michael Helms | michaelhelms.me</p>
-                <p class="footer4">Icons from The Noun Project and Flaticon</p>
-            </div>
-        </footer>
+        <h1 class="display-4">Hey!</h1>
+        <p class="lead">Thanks for stopping by, I'm currently in the process of re-writing my website.</p>
+        <hr class="my-4">
+        <p>To check out my GitHub, just click the button!.</p>
+        <a class="btn btn-primary btn-lg" href="https://github.com/mhelms44" role="button">GitHub</a>
+      </div>
 </body>
 
 </html>
